--- a/workflow-templates/pragma-generic-ci.yml
+++ b/workflow-templates/pragma-generic-ci.yml
@@ -43,7 +43,7 @@ jobs:
         with:
           build_type: ${{ matrix.config.build_type }}
           build_generator: ${{ matrix.config.generators }}
-          cmake_definitions: ${{ env.shared_cmake_definitions }}
+          cmake_definitions: ${{ env.shared_cmake_definitions }} -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }}
           
   # UBUNTU x64 GCC
   build-ubuntu:
@@ -81,4 +81,4 @@ jobs:
         with:
           build_type: ${{ matrix.config.build_type }}
           build_generator: ${{ matrix.config.generators }}
-          cmake_definitions: ${{ env.shared_cmake_definitions }}
+          cmake_definitions: ${{ env.shared_cmake_definitions }} -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }}
