--- a/workflow-templates/pragma-generic-ci.yml
+++ b/workflow-templates/pragma-generic-ci.yml
@@ -39,6 +39,9 @@ jobs:
         run: |
           git submodule update --init --recursive
           
+      #- name: Download common external libs
+      #  uses: Silverlan/common_actions/get_common_external_libs@actions
+          
       - name: CMake Build
         uses: Silverlan/common_actions/build_cmake@main
         with:
