--- a/workflow-templates/pragma-generic-ci.yml
+++ b/workflow-templates/pragma-generic-ci.yml
@@ -1,11 +1,10 @@
 name: Generic Pragma CI
 
-# on: [push]
 on:
   push:
-    branches: [ $default-branch ]
+    branches: [ master, actions ]
   pull_request:
-    branches: [ $default-branch ]
+    branches: [ master, actions ]
   
 # Template for downloading and building submodule
 #- name: Build submodule - moduleName
@@ -48,25 +47,32 @@ jobs:
             cxx: "cl",
             archiver: "7z a",
             generators: "Visual Studio 16 2019",
-            build_dir: 'build
+            build_dir: 'build'
           }
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      - name: Download submodules
-        run: |
-          git submodule update --init --recursive
+        with:
+          submodules: true
           
+      - name: Initialize Env
+        id: init-env
+        uses: Silverlan/common_actions/set_common_env_vars@actions
+
+      - name: Download binaries
+        uses: Silverlan/common_actions/download_build_binaries@actions
+        continue-on-error: true
+        
       #- name: Download common external libs
       #  uses: Silverlan/common_actions/get_common_external_libs@actions
-      
-      - name: CMake Build
-        uses: Silverlan/common_actions/build_cmake@main
-        with:
-          build_type: ${{ matrix.config.build_type }}
-          build_generator: ${{ matrix.config.generators }}
+          
+      - name: Build
+        id: build
+        uses: Silverlan/util_image/github_actions/build@actions
+          
+      - name: Upload binaries
+        uses: Silverlan/common_actions/upload_build_binaries@actions
           
   # UBUNTU x64 GCC
   build-ubuntu:
