--- a/workflow-templates/pragma-generic-ci.yml
+++ b/workflow-templates/pragma-generic-ci.yml
@@ -29,26 +29,32 @@ on:
 #    cmake_definitions: ${{ env.cmake_definitions }}
 
 jobs:
-  # WINDOWS x64 MSVC
-  build-windows:
-    name: Build-Windows-x64
+  build:
+    name: Build
     runs-on: ${{ matrix.config.os }}
     strategy:
       fail-fast: false
       matrix:
         config:
-        - {
-            name: "Windows x64 MSVC",
-            os: windows-latest,
-            artifact: "Windows-MSVC.tar.xz",
-            build_type: "RelWithDebInfo",
-            environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat",
-            cc: "cl",
-            cxx: "cl",
-            archiver: "7z a",
-            generators: "Visual Studio 16 2019",
+          - os: windows-latest
+            name: "Windows x64 MSVC"
+            artifact: "Windows-MSVC.tar.xz"
+            build_type: "RelWithDebInfo"
+            environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
+            cc: "cl"
+            cxx: "cl"
+            archiver: "7z a"
+            generators: "Visual Studio 16 2019"
             build_dir: 'build'
-          }
+          - os: ubuntu-latest
+            name: "Ubuntu GCC-11"
+            artifact: "ubuntu_gcc.7z"
+            build_type: "RelWithDebInfo"
+            cc: "gcc-11"
+            cxx: "g++-11"
+            archiver: "7z a"
+            generators: "Unix Makefiles"
+            build_dir: 'build'
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -59,6 +65,12 @@ jobs:
       - name: Initialize Env
         id: init-env
         uses: Silverlan/common_actions/set_common_env_vars@actions
+        
+      - name: Install GCC-11
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt update
+          sudo apt install gcc-11 g++-11
 
       - name: Download binaries
         uses: Silverlan/common_actions/download_build_binaries@actions
@@ -74,40 +86,3 @@ jobs:
       - name: Upload binaries
         uses: Silverlan/common_actions/upload_build_binaries@actions
           
-  # UBUNTU x64 GCC
-  build-ubuntu:
-    name: Build-Ubuntu-x64
-    runs-on: ${{ matrix.config.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        config:
-        - {
-            name: "Ubuntu GCC-11",
-            os: ubuntu-latest,
-            artifact: "ubuntu_gcc.7z",
-            build_type: "RelWithDebInfo",
-            cc: "gcc-11",
-            cxx: "g++-11",
-            archiver: "7z a",
-            generators: "Unix Makefiles"
-          }
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
-      - name: Install GCC-11
-        run: |
-          sudo apt update
-          sudo apt install gcc-11 g++-11
-          
-      - name: Download submodules
-        run: |
-          git submodule update --init --recursive
-          
-      - name: CMake Build
-        uses: Silverlan/common_actions/build_cmake@main
-        with:
-          build_type: ${{ matrix.config.build_type }}
-          build_generator: ${{ matrix.config.generators }}
-          cmake_definitions: ${{ env.shared_cmake_definitions }} -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }}
