--- a/workflow-templates/pragma-generic-ci.yml
+++ b/workflow-templates/pragma-generic-ci.yml
@@ -5,28 +5,6 @@ on:
     branches: [ master, actions ]
   pull_request:
     branches: [ master, actions ]
-  
-# Template for downloading and building submodule
-#- name: Build submodule - moduleName
-#  uses: Silverlan/common_actions/build_submodule@actions
-#  with:
-#    repo: 'repositoryUrl'
-#    repo_name: 'repoName'
-#    repo_branch: 'master'
-#    build_target: buildTarget
-#    cmake_var: 'MODULE_INCLUDE_DIR'
-#    cmake_var_lib: 'MODULE_LIBRARY'
-#    include_dir: '.'
-
-# Template for downloading header-only module (without building)
-#- name: Download submodule - moduleName
-#  uses: Silverlan/common_actions/get_submodule@actions
-#  with:
-#    dir: 'third_party_libs'
-#    repo: 'repositoryUrl'
-#    repo_name: 'repoName'
-#    repo_branch: 'master'
-#    cmake_definitions: ${{ env.cmake_definitions }}
 
 jobs:
   build:
@@ -57,32 +35,25 @@ jobs:
             build_dir: 'build'
 
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
         with:
           submodules: true
-          
+
       - name: Setup
         id: setup
         uses: Silverlan/common_actions/setup@actions
-        
-      - name: Install GCC-11
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt update
-          sudo apt install gcc-11 g++-11
-
+          
       - name: Download binaries
         uses: Silverlan/common_actions/download_build_binaries@actions
         continue-on-error: true
-        
-      #- name: Download common external libs
-      #  uses: Silverlan/common_actions/get_common_external_libs@actions
           
       - name: Build
         id: build
-        uses: Silverlan/util_image/github_actions/build@actions
+        uses: ${{ github.repository }}/github_actions/build@actions
+        with:
+          root_dir: "${{ env.GA_ROOT_DIR }}"
+          should_checkout: "0"
           
       - name: Upload binaries
         uses: Silverlan/common_actions/upload_build_binaries@actions
-          
+
